# rust-dex

./: .gitignore  .rules  Cargo.toml  Makefile  README.md
crates/acp/: Cargo.toml
crates/acp/src/: acp.rs  agent_session_id.rs  auth_env.rs  control.rs  error.rs  error_normalization.rs  error_shapes.rs  filesystem.rs  filesystem_tests.rs  jsonrpc_gap.rs  mcp_servers.rs  session_control_errors.rs  types.rs  version.rs
crates/acp/src/agent_command/: agent_detect.rs  claude_quirks.rs  codex_compat.rs  command_args.rs  command_probe.rs  copilot_quirks.rs  gemini_quirks.rs  mod.rs  model_request.rs  model_support.rs  registry.rs  spawn_options.rs
crates/acp/src/client/: handlers.rs  handshake.rs  mod.rs  shutdown.rs  spawn.rs  state.rs  transport.rs
crates/acp/src/perf_metrics/: capture.rs  capture_tests.rs  mod.rs  mod_tests.rs
crates/acp/src/permissions/: confirm.rs  decision.rs  escalation.rs  mod.rs  policy.rs  policy_tests.rs  resolve.rs  resolve_tests.rs  responder.rs  response.rs
crates/acp/src/platform/: liveness.rs  mod.rs
crates/acp/src/queue/: dispatcher.rs  mod.rs  session_queue.rs
crates/acp/src/runtime/: mod.rs
crates/acp/src/runtime/engine/: connected_session.rs  lifecycle.rs  manager.rs  manager_spawn.rs  manager_support.rs  mod.rs  prompt_turn.rs  reuse_policy.rs  session_options.rs
crates/acp/src/runtime/public/: contract.rs  errors.rs  events.rs  events_tests.rs  handle_state.rs  mod.rs  probe.rs  shared.rs
crates/acp/src/session/: acpx_state.rs  config_options.rs  event_log.rs  live_checkpoint.rs  mod.rs  mode_preference.rs  model_application.rs  model_state.rs  persisted_key_policy.rs  record.rs  schema.rs  store_options.rs
crates/acp/src/session/conversation_model/: agent_content.rs  conversation.rs  limits.rs  message.rs  mod.rs  record.rs  session_update.rs  tool_call.rs  tool_use.rs  trim.rs
crates/acp/src/session/events/: lock.rs  mod.rs  rotate.rs  writer.rs
crates/acp/src/session/export/: archive.rs  lookup.rs  mod.rs
crates/acp/src/session/import/: agent_match.rs  archive_parse.rs  build.rs  mod.rs
crates/acp/src/session/persistence/: file_session_store.rs  index.rs  mod.rs  parse.rs  serialize.rs
crates/acp/src/terminal/: kill.rs  mod.rs  mod_tests.rs  output.rs  spawn.rs  tracking.rs
crates/acp/tests/: client_lifecycle.rs  prompt_queue.rs  real_agent_smoke.rs  runtime_lifecycle.rs
crates/acp/tests/fixtures/fake_agent/: main.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/boltz/: Cargo.toml  build.rs  index.html
crates/boltz/src/: main.rs
crates/collections/: Cargo.toml
crates/fonts-ibm-plex/: Cargo.toml
crates/fonts-ibm-plex/src/: fonts_ibm_plex.rs
crates/gpui/: Cargo.toml  README.md
crates/gpui-probe/: Cargo.toml  README.md
crates/gpui-probe/examples/: inspector_demo.rs
crates/gpui-probe/src/: lib.rs  registry.rs  snapshot.rs  track.rs
crates/gpui-probe/src/driver/: actionability.rs  handle.rs  locator.rs  mod.rs  test_platform.rs
crates/gpui-probe/src/inspector/: mod.rs  overlay.rs  panel.rs
crates/gpui-probe/tests/: driver_smoke.rs  registry_smoke.rs  snapshot_smoke.rs
crates/gpui-probe/tests/snapshots/: snapshot_smoke__smoke_tree.snap
crates/gpui/examples/: README.md  active_state_bug.rs  text.rs  text_wrapper.rs  tree.rs  window_shadow.rs
crates/gpui/examples/image/: image.rs
crates/gpui/src/: action.rs  app.rs  key_dispatch.rs  keymap.rs  platform.rs  style.rs  svg_renderer.rs  test.rs  text_system.rs  window.rs
crates/gpui/src/app/: entity_map.rs  test_context.rs
crates/gpui/src/elements/: div.rs  text.rs
crates/gpui/src/platform/: keystroke.rs
crates/gpui/src/text_system/: line_wrapper.rs
crates/gpui/tests/: repro_scroll.rs
crates/gpui_platform/: Cargo.toml
crates/gpui_platform/src/: gpui_platform.rs
crates/gpui_wgpu/: Cargo.toml
crates/gpui_wgpu/src/: wgpu_context.rs  wgpu_renderer.rs
crates/icons/: Cargo.toml  README.md
crates/icons/src/: icons.rs
crates/language/: Cargo.toml
crates/language/src/: highlight.rs  language.rs
crates/logging/: Cargo.toml  README.md
crates/logging/src/: logging.rs
crates/markdown/: Cargo.toml
crates/markdown/src/: builder.rs  controls.rs  element.rs  entity.rs  html_rendering.rs  markdown.rs  parser.rs  rendered.rs  style.rs
crates/markdown/src/parser/: html.rs
crates/media/: Cargo.toml
crates/menu/: Cargo.toml
crates/menu/src/: menu.rs
crates/rope/: Cargo.toml
crates/rope/src/: chunk.rs  macros.rs  rope.rs
crates/sum_tree/: Cargo.toml
crates/sum_tree/src/: cursor.rs  sum_tree.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: terminal.rs
crates/tracing_facade/: Cargo.toml  build.rs
crates/tracing_facade/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: components.rs  prelude.rs  styles.rs  ui.rs  utils.rs
crates/ui/src/components/: action_panel.rs  ai.rs  alert.rs  alert_dialog.rs  app_shell.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  calendar.rs  card.rs  carousel.rs  chart.rs  chip.rs  code_editor.rs  combobox.rs  command.rs  command_palette.rs  container.rs  context_menu.rs  data_table.rs  date_picker.rs  description_list.rs  divider.rs  drawer.rs  dropdown_menu.rs  empty_state.rs  facepile.rs  feed.rs  file_input.rs  form.rs  form_field.rs  hover_card.rs  icon.rs  image.rs  input_group.rs  input_otp.rs  item.rs  kbd.rs  (+37 more)
crates/ui/src/styles/: focus_ring.rs  palette.rs  radius.rs  semantic.rs  shadow.rs
crates/ui/src/traits/: styled_ext.rs
crates/ui/src/utils/: fuzzy_match.rs
crates/ui_macros/: Cargo.toml
crates/util_macros/: Cargo.toml
crates/util_macros/src/: util_macros.rs
docs/: README.md  (+7 more)
examples/ui_gallery/: Cargo.toml  Makefile
examples/ui_gallery/src/: gallery_app.rs  main.rs
examples/ui_gallery/src/pages/: data.rs  elements.rs  examples.rs  feedback.rs  forms.rs  layout.rs  mod.rs  navigation.rs  overlays.rs
examples/ui_gallery/tests/: pane_group_harness.rs  pane_group_probe_e2e.rs  pane_tab_lifecycle_harness.rs  visual_harness.rs
template/: Cargo.toml  README.md  cargo-generate.toml
template/src/: main.rs
(+253 files in other folders)
