[workspace]
resolver = "2"
members = [
    "crates/app",
    "examples/ui_gallery",
    "crates/collections",
    "crates/component",
    "crates/gpui",
    "crates/gpui_linux",
    "crates/gpui_macos",
    "crates/gpui_macros",
    "crates/gpui_platform",
    "crates/gpui_shared_string",
    "crates/gpui_util",
    "crates/gpui_wgpu",
    "crates/gpui_windows",
    "crates/http_client",
    "crates/icons",
    "crates/media",
    "crates/menu",
    "crates/refineable",
    "crates/refineable/derive_refineable",
    "crates/scheduler",
    "crates/sum_tree",
    "crates/syntax_theme",
    "crates/theme",
    "crates/ui",
    "crates/ui_macros",
    "crates/util",
    "crates/util_macros",
    "crates/logging",
    "crates/tracing_facade",
    "crates/tracing_facade_macros",
]
default-members = ["crates/app"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
collections = { path = "crates/collections", version = "0.1.0" }
component = { path = "crates/component" }
derive_refineable = { path = "crates/refineable/derive_refineable" }
gpui = { path = "crates/gpui", default-features = false }
gpui_shared_string = { path = "crates/gpui_shared_string" }
gpui_linux = { path = "crates/gpui_linux", default-features = false }
gpui_macos = { path = "crates/gpui_macos", default-features = false }
gpui_macros = { path = "crates/gpui_macros" }
gpui_platform = { path = "crates/gpui_platform", default-features = false }
gpui_wgpu = { path = "crates/gpui_wgpu" }
gpui_windows = { path = "crates/gpui_windows", default-features = false }
gpui_util = { path = "crates/gpui_util" }
http_client = { path = "crates/http_client" }
icons = { path = "crates/icons" }
media = { path = "crates/media" }
menu = { path = "crates/menu" }
refineable = { path = "crates/refineable" }
scheduler = { path = "crates/scheduler" }
sum_tree = { path = "crates/sum_tree" }
syntax_theme = { path = "crates/syntax_theme" }
theme = { path = "crates/theme" }
ui = { path = "crates/ui" }
ui_macros = { path = "crates/ui_macros" }
util = { path = "crates/util" }
util_macros = { path = "crates/util_macros" }
logging = { path = "crates/logging" }
tracing_facade = { path = "crates/tracing_facade" }
tracing_facade_macros = { path = "crates/tracing_facade_macros" }
anyhow = "1.0.86"
ashpd = { version = "0.13", default-features = false, features = [
    "async-io",
    "notification",
    "open_uri",
    "file_chooser",
    "settings",
    "trash"
] }
async-channel = "2.5.0"
async-compression = { version = "0.4", features = ["bzip2", "gzip", "futures-io"] }
async-fs = "2.1"
async-tar = "0.5.1"
async-task = "4.7"
async_zip = { version = "0.0.18", features = ["deflate", "deflate64"] }
backtrace = "0.3"
bitflags = "2.6.0"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
ctor = "0.4.0"
derive_more = { version = "2.1.1", features = [
    "add",
    "add_assign",
    "deref",
    "deref_mut",
    "display",
    "from_str",
    "mul",
    "mul_assign",
    "not",
] }
dirs = "6.0"
documented = "0.9.1"
dunce = "1.0"
futures = "0.3.32"
futures-concurrency = "7.7.1"
futures-lite = "1.13"
git2 = { version = "0.20.1", default-features = false, features = ["vendored-libgit2"] }
globset = "0.4"
heapless = "0.9.2"
heck = "0.5"
http = "1.1"
http-body = "1.0"
ignore = "0.4.22"
image = "0.25.1"
indexmap = { version = "2.7.0", features = ["serde"] }
indoc = "2"
inventory = "0.3.19"
itertools = "0.14.0"
libc = "0.2"
log = { version = "0.4.16", features = ["kv_unstable_serde", "serde"] }
mach2 = "0.5"
metal = "0.33"
nix = "0.29"
objc = "0.2"
objc2-app-kit = { version = "0.3", default-features = false, features = [ "NSGraphics" ] }
palette = { version = "0.7.5", default-features = false, features = ["std"] }
parking_lot = "0.12.1"
percent-encoding = "2.3.2"
proc-macro2 = "1.0.93"
profiling = "1"
pretty_assertions = "1.4"
proptest = { version = "1.10.0", features = ["attr-macro"] }
pollster = "0.4.0"
quote = "1.0.9"
rand = "0.9"
rayon = "1.8"
regex = "1.5"
rust-embed = { version = "8.11", features = ["include-exclude"] }
rustc-hash = "2.1.0"
schemars = { version = "1.0", features = ["indexmap2"] }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.221", features = ["derive", "rc"] }
serde_json = { version = "1.0.144", features = ["preserve_order", "raw_value"] }
serde_json_lenient = { version = "0.2", features = [
    "preserve_order",
    "raw_value",
] }
serde_urlencoded = "0.7"
sha2 = "0.10"
shlex = "1.3.0"
slotmap = "1.0.6"
smallvec = { version = "1.6", features = ["union", "const_new"] }
smol = "2.0"
stacksafe = "0.1"
strum = { version = "0.27.2", features = ["derive"] }
syn = { version = "2.0.101", features = ["full", "extra-traits", "visit-mut"] }
take-until = "0.2.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
tracing = "0.1.40"
unicase = "2.6"
url = "2.2"
uuid = { version = "1.1.2", features = ["v4", "v5", "v7", "serde"] }
walkdir = "2.5"
which = "6.0.0"
wasm-bindgen = "0.2.113"
web-time = "1.1.0"
wgpu = "29.0.3"
windows-core = "0.61"
app = { path = "crates/app" }

[workspace.dependencies.windows]
version = "0.61"
features = [
    "Foundation_Numerics",
    "Globalization_DateTimeFormatting",
    "Storage_Search",
    "Storage_Streams",
    "System_Threading",
    "UI_ViewManagement",
    "Wdk_System_SystemServices",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectManipulation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Hlsl",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Credentials",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Performance",
    "Win32_System_Pipes",
    "Win32_System_RestartManager",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_WinRT",
    "Win32_UI_Controls",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media",
]


[profile.dev]
split-debuginfo = "unpacked"
incremental = true
codegen-units = 16

# mirror configuration for crates compiled for the build platform
# (without this cargo will compile ~400 crates twice)
[profile.dev.build-override]
codegen-units = 16
split-debuginfo = "unpacked"
debug = true

[profile.dev.package]
gpui_macros = { opt-level = 3 }
derive_refineable = { opt-level = 3 }
ui_macros = { opt-level = 3 }
util_macros = { opt-level = 3 }
quote = { opt-level = 3 }
syn = { opt-level = 3 }
proc-macro2 = { opt-level = 3 }

taffy = { opt-level = 3 }
resvg = { opt-level = 3 }
collections = { codegen-units = 1 }
menu = { codegen-units = 1 }
refineable = { codegen-units = 1 }

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1

[profile.release.package]
app = { codegen-units = 16 }

[profile.release-fast]
inherits = "release"
debug = "full"
lto = false
codegen-units = 16

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

declare_interior_mutable_const = "deny"

redundant_clone = "deny"
disallowed_methods = "deny"

style = { level = "allow", priority = -1 }

# Individual rules that have violations in the codebase:
type_complexity = "allow"
let_underscore_future = "allow"

# Motivation: We use `vec![a..b]` a lot when dealing with ranges in text, so
# warning on this rule produces a lot of noise.
single_range_in_vec_init = "allow"

# in Rust it can be very tedious to reduce argument count without
# running afoul of the borrow checker.
too_many_arguments = "allow"

# We often have large enum variants yet we rarely actually bother with splitting them up.
large_enum_variant = "allow"

# Boolean expressions can be hard to read, requiring only the minimal form gets in the way
nonminimal_bool = "allow"

[workspace.metadata.cargo-machete]
ignored = [
    "bindgen",
    "cbindgen",
    "prost_build",
    "serde",
    "component",
    "documented",
    "sea-orm-macros",
]
