[workspace]

[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
gpui = { version = "0.2.2", package = "boltz-gpui", default-features = false }
gpui_platform = { version = "0.1.0", package = "boltz-gpui-platform" }
theme = { version = "0.1.0", package = "boltz-theme" }
ui = { version = "0.1.0", package = "boltz-ui" }
