[package]
description = "A clean GPUI desktop application base."
edition.workspace = true
name = "boltz-app"
version = "0.1.0"
publish.workspace = true
license = "GPL-3.0-or-later"
default-run = "boltz-app"

[lints]
workspace = true

[[bin]]
name = "boltz-app"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
theme.workspace = true
ui.workspace = true
