[package]
name = "boltz-collections"
version = "0.1.0"
edition.workspace = true
publish = true
license = "Apache-2.0"
description = "Standard collection types used by GPUI"

repository.workspace = true
[lints]
workspace = true

[lib]
path = "src/collections.rs"
doctest = false

[features]
test-support = []

[dependencies]
indexmap.workspace = true
rustc-hash.workspace = true
