[package]
name = "boltz-gpui-platform"
description = "Platform facade selecting the right GPUI backend for the target OS."
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"
repository.workspace = true

[lints]
workspace = true

[lib]
path = "src/gpui_platform.rs"

[features]
default = []
test-support = ["gpui/test-support", "gpui_macos/test-support"]
runtime_shaders = ["gpui_macos/runtime_shaders"]
wayland = ["gpui_linux/wayland"]
x11 = ["gpui_linux/x11"]

[dependencies]
gpui.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
gpui_macos.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
gpui_windows.workspace = true
gpui = { workspace = true, features = ["windows-manifest"] }

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
gpui_linux.workspace = true
