[package]
name = "boltz-gpui-wgpu"
description = "Shared wgpu renderer and text system used by the Linux and Windows GPUI backends."
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/gpui_wgpu.rs"

[features]
default = []

[dependencies]
gpui.workspace = true
anyhow.workspace = true
bytemuck = "1"
collections.workspace = true
cosmic-text = "0.17.0"
etagere = "0.2"
itertools.workspace = true
log.workspace = true
parking_lot.workspace = true
profiling.workspace = true
raw-window-handle = "0.6"
smallvec.workspace = true
swash = "0.2.6"
gpui_util.workspace = true
wgpu.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pollster.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
js-sys = "0.3"