[package]
name = "boltz-icons"
description = "Icon library and icon-rendering GPUI component."
version = "0.2.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true

[lints]
workspace = true

[lib]
path = "src/icons.rs"

[dependencies]
gpui.workspace = true
rust-embed.workspace = true
serde.workspace = true
strum.workspace = true
