[package]
name = "boltz-logging"
version = "0.1.0"
edition.workspace = true
publish = true
license = "GPL-3.0-or-later"

description = "Logging utilities used by GPUI"
repository.workspace = true
[lints]
workspace = true

[lib]
path = "src/logging.rs"

[features]
default = []

[dependencies]
collections.workspace = true
chrono.workspace = true
log.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
