[package]
name = "boltz-markdown"
description = "CommonMark/GFM markdown parsing + rendering primitives (Zed-derived, no boltz-ui dependency)."
version = "0.2.0"
edition.workspace = true
publish = true
license = "GPL-3.0-or-later"
repository.workspace = true

[lints]
workspace = true

[lib]
name = "markdown"
path = "src/markdown.rs"
doctest = false

[dependencies]
collections.workspace = true
gpui.workspace = true
icons.workspace = true
language.workspace = true
log.workspace = true
stacksafe.workspace = true
syntax_theme.workspace = true
theme.workspace = true
util.workspace = true

html5ever = "0.27.0"
linkify = "0.10.0"
markup5ever_rcdom = "0.3.0"
pulldown-cmark = { version = "0.13.0", default-features = false }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
