[package]
name = "boltz-media"
version = "0.1.0"
edition.workspace = true
publish = true
license = "Apache-2.0"
description = "Bindings to macOS media handling APIs"

repository.workspace = true
[lints]
workspace = true

[lib]
path = "src/media.rs"
doctest = false

[dependencies]
anyhow.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation.workspace = true
ctor.workspace = true
foreign-types = "0.5"
metal.workspace = true
core-video.workspace = true
objc.workspace = true

[build-dependencies]
bindgen = "0.71"
