[package]
name = "boltz-menu"
description = "Desktop application menu system for GPUI apps."
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"
repository.workspace = true

[lints]
workspace = true

[lib]
path = "src/menu.rs"
doctest = false

[dependencies]
gpui.workspace = true
