[package]
name = "boltz-sum-tree"
version = "0.1.0"
edition.workspace = true
publish = true
license = "Apache-2.0"
description = "A sum tree data structure, a concurrency-friendly B-tree"

repository.workspace = true
[lints]
workspace = true

[lib]
path = "src/sum_tree.rs"
doctest = false

[dependencies]
heapless.workspace = true
rayon.workspace = true
log.workspace = true
tracing_facade.workspace = true
tracing.workspace = true
proptest = { workspace = true, optional = true }

[package.metadata.cargo-machete]
ignored = ["tracing"]

[dev-dependencies]
logging.workspace = true
proptest.workspace = true
rand.workspace = true
ctor.workspace = true

[features]
test-support = ["proptest"]