[package]
name = "boltz-tracing-facade"
version = "0.1.0"
edition.workspace = true
publish = true
license = "GPL-3.0-or-later"

description = "Tracing facade used by GPUI"
repository.workspace = true
[lints]
workspace = true

[features]
tracy = ["tracing-tracy", "tracy-client"]

[dependencies]
logging.workspace = true
tracing.workspace = true

tracing-subscriber = "0.3.22"
tracing-tracy = { version = "0.11.4", optional = true, features = ["enable", "ondemand"] }
tracy-client = { version = "0.18.2", optional = true, features = ["enable", "ondemand"] }

tracing_facade_macros.workspace = true
